Some corrections Fixed loading bar appearance (only appear when pulling data from MongoDB) ScrollTo aligned with table title Meta viewport set to fixed width Append last update date to footer

--- a/public_src/css/main.styl
+++ b/public_src/css/main.styl
@@ -88,6 +88,7 @@ main > div
 
 #chart-container
   position relative
+  min-height 500px
 
 #map
   width 100%
